Fix spacing in Settings controls
[MAILPOET-3073]

--- a/assets/css/src/generic/_forms-input.scss
+++ b/assets/css/src/generic/_forms-input.scss
@@ -55,8 +55,15 @@
     }
   }
 
-  &.mailpoet-full-width + .mailpoet-form-input.mailpoet-full-width { margin-top: $grid-gap; }
-  &:not(.mailpoet-full-width) + .mailpoet-form-input:not(.mailpoet-full-width) { margin-left: $grid-gap; }
+  &.mailpoet-full-width + .mailpoet-form-input.mailpoet-full-width,
+  &.mailpoet-full-width + .mailpoet-button.mailpoet-full-width {
+    margin-top: $grid-gap;
+  }
+
+  &:not(.mailpoet-full-width) + .mailpoet-form-input:not(.mailpoet-full-width),
+  &:not(.mailpoet-full-width) + .mailpoet-button:not(.mailpoet-full-width) {
+    margin-left: $grid-gap;
+  }
 }
 
 .mailpoet-form-input-small {
